@@ -463,9 +463,15 @@ $TCA['sys_dmail_group'] = Array (
 				'type' => 'select',
 				'foreign_table' => 'sys_dmail_category',
 				'foreign_table_where' => 'AND sys_dmail_category.l18n_parent=0 AND sys_dmail_category.pid IN (###PAGE_TSCONFIG_IDLIST###) ORDER BY sys_dmail_category.uid',
+				'itemsProcFunc' => 'tx_directmail_select_categories->get_localized_categories',
+				'itemsProcFunc_config' => array (
+					'table' => 'sys_dmail_category',
+					'indexField' => 'uid',
+				),
 				'size' => 5,
 				'minitems' => 0,
-				'maxitems' => 30,
+				'maxitems' => 60,
+				'renderMode' => 'checkbox',
 				'MM' => 'sys_dmail_group_category_mm',
 			)
 		)
